; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_harbor.c_skynet_harbor_message_isremote.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_harbor.c_skynet_harbor_message_isremote.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HARBOR = common dso_local global i32 0, align 4
@HANDLE_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @skynet_harbor_message_isremote(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @HARBOR, align 4
  %5 = icmp ne i32 %4, -1
  %6 = zext i1 %5 to i32
  %7 = call i32 @assert(i32 %6)
  %8 = load i32, i32* %2, align 4
  %9 = load i32, i32* @HANDLE_MASK, align 4
  %10 = xor i32 %9, -1
  %11 = and i32 %8, %10
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @HARBOR, align 4
  %14 = icmp ne i32 %12, %13
  br i1 %14, label %15, label %18

15:                                               ; preds = %1
  %16 = load i32, i32* %3, align 4
  %17 = icmp ne i32 %16, 0
  br label %18

18:                                               ; preds = %15, %1
  %19 = phi i1 [ false, %1 ], [ %17, %15 ]
  %20 = zext i1 %19 to i32
  ret i32 %20
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
